2017-01-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (getNextResolution): uses
	ResolutionHandler to get actual screen size.
	* src/client/GameEngine.cpp (getPreviousResolution): uses
	ResolutionHandler to get actual screen size.
	* src/client/ResolutionHandler.hpp: fix multiple inclusion guard name.

	* src/logger/Logger.cpp: document some members.
	* src/logger/LoggerOutputFile.cpp: update doxygen documentation.

2017-01-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/: change headers dates for 2017 for all sources.

2017-01-13  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/: change headers dates for 2017 for all sources.
	* src/services/: change headers dates for 2017 for all sources.

2017-01-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probe): now return a temporary
	string from resultToString.

	* src/client/ResolutionHandler.cpp (resultToString): int result to
	string.

	* src/client/ResolutionHandler.cpp (probe): use RainbrurpgException
	to thrown error.

2016-12-28  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probeFromInts): remove unneeded
	function.

	* src/client/ResolutionHandler.cpp (probeFromWindow): implement a first
	version.
	* src/client/ResolutionHandler_Test.cpp (fromWindowFailWithNullPointer):
	add a probeFromWindow test for a NULL pointer.
	* src/client/GameEngine.hpp (getRendererWindow): rename to
	getRenderWindow to fix a typo.

	* src/client/ResolutionHandler.cpp (probeFromCfg): remove unneeded
	function.
	* src/client/GameEngine.hpp (getRenderSystem): add new getter.

2016-12-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probeFromString): implented using
	Boost.regex.

	* DEPENDENCIES: add Boost.Regex dependency.
	* CMakeLists.txt:search for Boost.Regex.

	* src/client/ResolutionHandler_Test.cpp: unit tests for previous class.
	* src/client/ResolutionHandler.cpp (ResolutionHandler): empty probe
	class.