@@ -101,6 +101,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** Start to handle Local test
      While waiting for the meta library
+- [ ] Create a new LoadingBar base don a CEGUI layout
 - [ ] Launch an embedded server
 - [ ] See if we can generate a first landscape
 **** Start to handle the Profile GameState
@@ -123,6 +124,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2017-01-24 mar. 19:03]--[2017-01-24 mar. 19:08] =>  0:05
      CLOCK: [2017-01-17 mar. 12:17]--[2017-01-17 mar. 12:46] =>  0:29
      CLOCK: [2017-01-09 lun. 14:59]--[2017-01-09 lun. 15:23] =>  0:24
      CLOCK: [2017-01-09 lun. 14:22]--[2017-01-09 lun. 14:57] =>  0:35
@@ -162,9 +164,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
     - [X] Not sure we need the int/int result, maybe the probe function
       could directly return string version
 - [X] GameEngine finally uses ResolutionHandler to get current resolution
-- [ ] May remove the src/client/LoadingBar.* (not used anymore)
-  Maybe keep it to change it to a CEGUI layout, used multiple times
-  When generating local level the first time, when cloning a server etc...
+- [X] May remove the src/client/LoadingBar.* (not used anymore)
 - [ ] Maybe we could ask for OgreCfgSaver save using a CeguiDialog
 - [ ] Some overlay disappears in 1280x1024 resolution
 **** TODO Handle doxygen documentation
