@@ -1,3 +1,7 @@
+2017-01-24  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/LoadingBar.cpp: remove unneeded class.
+
 2017-01-17  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/GameEngine.cpp (getNextResolution): uses
